# sdl2-example

./: CMakeLists.txt
.github/workflows/: windows.yaml
src/: main.c
